Fix issue with javafx imports